update link paths

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lily Design - About</title>
-  <link href="/css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+  <link href="./css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -15,18 +15,18 @@
     <!-- Header -->
     <header>
       <div>
-        <a href="/">
-          <img src="/images/logo-w-letterhead-outl-bigger-72.png" />
+        <a href="./index.html">
+          <img src="./images/logo-w-letterhead-outl-bigger-72.png" />
         </a>
       </div>
-      <nav>
+      <nav style="word-spacing: 40px;">
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/portfolio/portfolio.html">Portolio</a></li>
-          <li><a href="/services.html">Services</a></li>
-          <li><a href="/shopping/shopping.html">Shopping</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./portfolio/portfolio.html">Portfolio</a></li>
+          <li><a href="./services.html">Services</a></li>
+          <li><a href="./shopping/shopping.html">Shop</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -38,7 +38,7 @@
 
     <div style="display: flex;">
       <img style="width: 49%; object-fit: cover; margin: 1%; border-radius: 10px;"
-        src="/images/Headshot and Artwork_2024 520.png" alt="">
+        src="./images/Headshot and Artwork_2024 520.png" alt="">
       <div style="margin: 1%">
         <h3 style="color: #D91A4D; font-size:2.5rem; font-weight: normal">Statement</h3>
         <p>Function and beauty have always been at the forefront of my creative process. Before I even knew that these
@@ -68,7 +68,7 @@
           commitment to all the projects she works on.</p>
       </div>
       <img style="width: 49%; object-fit: cover; margin: 1%; border-radius: 10px;"
-        src="/images/Headshot and Artwork_2024 521.png" alt="">
+        src="./images/Headshot and Artwork_2024 521.png" alt="">
     </div>
   </div>
 
@@ -79,7 +79,7 @@
     </div>
     
     <div style="text-align: center;">
-      <a href="/contact.html">
+      <a href="./contact.html">
         <h3>Reach Out</h3>
       </a>
       <ul>
@@ -90,8 +90,8 @@
     
     <div style="align-self:center;">
       <ul class="social-icons">
-        <li><a href="https://www.instagram.com/willows.studi0/"><img src="/images/icon-insta.png"></a></li>
-        <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="/images/icon-in.png"></a></li>
+        <li><a href="https://www.instagram.com/willows.studi0/"><img src="./images/icon-insta.png"></a></li>
+        <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="./images/icon-in.png"></a></li>
       </ul>
     </div>
   </footer>
