--- a/portfolio/branding/branding.html
+++ b/portfolio/branding/branding.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lily Design - Branding</title>
-  <link href="/css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+  <link href="./../../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -15,18 +15,18 @@
     <!-- Header -->
     <header>
       <div>
-        <a href="/">
-          <img src="/images/logo-w-letterhead-outl-bigger-72.png" />
+        <a href="./../../index.html">
+          <img src="./../../images/logo-w-letterhead-outl-bigger-72.png" />
         </a>
       </div>
       <nav>
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/portfolio/portfolio.html">Portolio</a></li>
-          <li><a href="/services.html">Services</a></li>
-          <li><a href="/shopping/shopping.html">Shopping</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="./../../index.html">Home</a></li>
+          <li><a href="./../../about.html">About</a></li>
+          <li><a href="./../../portfolio/portfolio.html">Portolio</a></li>
+          <li><a href="./../../services.html">Services</a></li>
+          <li><a href="./../../shopping/shopping.html">Shopping</a></li>
+          <li><a href="./../../contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -39,13 +39,13 @@
       <!-- Gallery Section -->
       <div class="gallery">
         <div class="thumbnail">
-          <a href="/portfolio/branding/projects/LD-branding.html"><h3>Lily Design Branding</h3></a>
-          <a href="/portfolio/branding/projects/LD-branding.html"><img src="/portfolio/images/LD_BC_Mockup_extended.jpg" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
-          <section><a href="/portfolio/branding/projects/LD-branding.html">see more</a></section>
+          <a href="./projects/LD-branding.html"><h3>Lily Design Branding</h3></a>
+          <a href="./projects/LD-branding.html"><img src="./../images/LD_BC_Mockup_extended.jpg" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
+          <section><a href="./projects/LD-branding.html">see more</a></section>
         </div>
         <div class="thumbnail">
           <a><h3>Coming Soon</h3></a>
-          <a><img src="/portfolio/branding/images/coming-soon.png" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
+          <a><img src="./images/coming-soon.png" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
         </div>
       </div>
     </div>
@@ -57,7 +57,7 @@
     </div>
 
     <div style="text-align: center;">
-      <a href="/contact.html">
+      <a href="./../../contact.html">
         <h3>Reach Out</h3>
       </a>
       <ul>
@@ -68,8 +68,8 @@
 
     <div style="align-self:center;">
       <ul class="social-icons">
-        <li><a href="https://www.instagram.com/willows.studi0/"><img src="/images/icon-insta.png"></a></li>
-        <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="/images/icon-in.png"></a></li>
+        <li><a href="https://www.instagram.com/willows.studi0/"><img src="./../../images/icon-insta.png"></a></li>
+        <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="./../../images/icon-in.png"></a></li>
       </ul>
     </div>
   </footer>
