--- a/shopping/shopping.html
+++ b/shopping/shopping.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lily Design - Shopping</title>
-  <link href="/css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+  <link href="./../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -15,25 +15,25 @@
     <!-- Header -->
     <header>
       <div>
-        <a href="/">
-          <img src="/images/logo-w-letterhead-outl-bigger-72.png" />
+        <a href="./../index.html">
+          <img src="./../images/logo-w-letterhead-outl-bigger-72.png" />
         </a>
       </div>
-      <nav>
+      <nav style="word-spacing: 40px;">
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/portfolio/portfolio.html">Portolio</a></li>
-          <li><a href="/services.html">Services</a></li>
-          <li><a href="/shopping/shopping.html">Shopping</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="./../index.html">Home</a></li>
+          <li><a href="./../about.html">About</a></li>
+          <li><a href="./../portfolio/portfolio.html">Portfolio</a></li>
+          <li><a href="./../services.html">Services</a></li>
+          <li><a href="./shopping.html">Shop</a></li>
+          <li><a href="./../contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
 
     <!-- Hero Section -->
     <div class="hero">
-      <h2 class="hero-header">Shopping</h2>
+      <h2 class="hero-header">Shop</h2>
     </div>
 
     <!-- Gallery Section -->
@@ -59,7 +59,7 @@
     </div>
 
     <div style="text-align: center;">
-      <a href="/contact.html">
+      <a href="./../contact.html">
         <h3>Reach Out</h3>
       </a>
       <ul>
@@ -70,8 +70,8 @@
 
     <div style="align-self:center;">
       <ul class="social-icons">
-        <li><a href="https://www.instagram.com/willows.studi0/"><img src="/images/icon-insta.png"></a></li>
-        <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="/images/icon-in.png"></a></li>
+        <li><a href="https://www.instagram.com/willows.studi0/"><img src="./../images/icon-insta.png"></a></li>
+        <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="./../images/icon-in.png"></a></li>
       </ul>
     </div>
   </footer>
