--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lily Design</title>
-  <link href="/css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+  <link href="./css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -15,18 +15,18 @@
     <!-- Header -->
     <header>
       <div>
-        <a href="/">
-          <img src="/images/logo-w-letterhead-outl-bigger-72.png" />
+        <a href="./index.html">
+          <img src="./images/logo-w-letterhead-outl-bigger-72.png" />
         </a>
       </div>
-      <nav>
+      <nav style="word-spacing: 40px;">
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/portfolio/portfolio.html">Portolio</a></li>
-          <li><a href="/services.html">Services</a></li>
-          <li><a href="/shopping/shopping.html">Shopping</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./portfolio/portfolio.html">Portfolio</a></li>
+          <li><a href="./services.html">Services</a></li>
+          <li><a href="./shopping/shopping.html">Shop</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -34,51 +34,51 @@
     <!-- Hero Section -->
     <div class="hero">
       <h2 class="hero-header">Where Function Meets Beauty</h2>
-      <img style="width:100%;" src="/images/ombre_design_center (wider).png">
+      <img style="width:100%;" src="./images/ombre_design_center (wider).png">
     </div>
 
     <!-- Gallery Section -->
     <div class="gallery">
       <div class="thumbnail">
-        <a href="/about.html">
+        <a href="./about.html">
           <h3>About</h3>
         </a>
-        <a href="/about.html"><img src="/images/Headshot and Artwork_2024 520.png" alt="Lily Forman Protrait"
+        <a href="./about.html"><img src="./images/Headshot and Artwork_2024 520.png" alt="Lily Forman Protrait"
             width="2000" class="cards" /></a>
         <p class="text_column">Lily Forman is a bay area native with an insatiable appetite to create. She pursues
           innovative design in every project she’s in. Her interests in fashion and food also contribute to her design
           aesthetic making for chic and delicious visuals.</p>
-        <section><a href="/about.html">see more</a></section>
+        <section><a href="./about.html">see more</a></section>
       </div>
       <div class="thumbnail">
-        <a href="/portfolio/portfolio.html">
+        <a href="./portfolio/portfolio.html">
           <h3>Portfolio</h3>
         </a>
-        <a href="/portfolio/portfolio.html"><img src="/images/seeding-the-city-poster_fin-mech.jpg" alt="" width="2000"
+        <a href="./portfolio/portfolio.html"><img src="./images/seeding-the-city-poster_fin-mech.jpg" alt="" width="2000"
             class="cards" /></a>
         <p class="text_column">The pieces in the portfolio are diverse and reflect all the facets of Lily Design. At the
           same time, every piece is quintessential Lily Design with colorful and vivid palettes, as well as enticing and
           funky imagery.</p>
-        <section><a href="/portfolio/portfolio.html">see more</a></section>
+        <section><a href="./portfolio/portfolio.html">see more</a></section>
       </div>
       <div class="thumbnail">
-        <a href="/services.html">
+        <a href="./services.html">
           <h3>Services</h3>
         </a>
-        <a href="/services.html"><img src="/images/sketch-1.jpg" alt="" width="2000" class="cards" /></a>
+        <a href="./services.html"><img src="./images/sketch-1.jpg" alt="" width="2000" class="cards" /></a>
         <p class="text_column">Whether its creating the look and feel of your business, the most appetizing
           advertisements, or imagery for any needs, Lily Design can do it. </p>
-        <section><a href="/services.html">see more</a></section>
+        <section><a href="./services.html">see more</a></section>
       </div>
       <div class="thumbnail">
-        <a href="/shopping/shopping.html">
+        <a href="./shopping/shopping.html">
           <h3>Shopping</h3>
         </a>
-        <a href="/shopping/shopping.html"><img src="/images/247E77C7-A78B-4C7C-A2E1-4311657596B6 2.JPG" alt=""
+        <a href="./shopping/shopping.html"><img src="./images/247E77C7-A78B-4C7C-A2E1-4311657596B6 2.JPG" alt=""
             width="2000" class="cards" /></a>
         <p class="text_column">Lily Design has even more to offer! She exercises her creativity in other avenues such
           as creating clothing and jewelry. She also shares her works in bite sized and consumable formats.</p>
-        <section><a href="/shopping/shopping.html">see more</a></section>
+        <section><a href="./shopping/shopping.html">see more</a></section>
       </div>
     </div>
   </div>
@@ -90,7 +90,7 @@
     </div>
     
     <div style="text-align: center;">
-      <a href="/contact.html">
+      <a href="./contact.html">
         <h3>Reach Out</h3>
       </a>
       <ul>
@@ -101,8 +101,8 @@
     
     <div style="align-self:center;">
       <ul class="social-icons">
-        <li><a href="https://www.instagram.com/willows.studi0/"><img src="/images/icon-insta.png"></a></li>
-        <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="/images/icon-in.png"></a></li>
+        <li><a href="https://www.instagram.com/willows.studi0/"><img src="./images/icon-insta.png"></a></li>
+        <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="./images/icon-in.png"></a></li>
       </ul>
     </div>
   </footer>
