--- a/portfolio/branding/projects/LD-branding.html
+++ b/portfolio/branding/projects/LD-branding.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lily Design - Personal Branding</title>
-  <link href="/css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+  <link href="./../../../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -15,18 +15,18 @@
     <!-- Header -->
     <header>
       <div>
-        <a href="/">
+        <a href="./../../../index.html">
           <img src="/images/logo-w-letterhead-outl-bigger-72.png" />
         </a>
       </div>
-      <nav>
+      <nav style="word-spacing: 40px;">
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/portfolio/portfolio.html">Portolio</a></li>
-          <li><a href="/services.html">Services</a></li>
-          <li><a href="/shopping/shopping.html">Shopping</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="./../../../index.html">Home</a></li>
+          <li><a href="./../../../about.html">About</a></li>
+          <li><a href="./../../portfolio.html">Portfolio</a></li>
+          <li><a href="./../../../services.html">Services</a></li>
+          <li><a href="./../../../shopping/shopping.html">Shop</a></li>
+          <li><a href="./../../../contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -34,10 +34,10 @@
     <div>
       <nav>
         <ul style="padding-left: 0; padding-top: 30px; padding-bottom: 15px;">
-          <li style="display: inline;"><a style="color: #066129" href="/portfolio/portfolio.html">Portolio</a>
+          <li style="display: inline;"><a style="color: #066129" href="./../../portfolio.html">Portfolio</a>
           </li>
           <span style="color: #066129;">|</span>
-          <li style="display: inline;"><a style="color: #066129" href="/portfolio/branding/branding.html">Branding</a>
+          <li style="display: inline;"><a style="color: #066129" href="./../branding.html">Branding</a>
           </li> <span style="color: #066129;">|</span>
           <li style="display: inline;"><a style="color: #066129" href="#top">Lily Design Branding</a></li>
         </ul>
@@ -50,34 +50,19 @@
     </div>
 
     <!-- Top Section -->
-    <div style="display: flex">
-      <!-- images -->
-      <div style="display: flex; flex-direction: column; margin-right: 15px;">
-        <!-- initial sketches -->
-        <div style="display: flex; flex-direction: row; gap: 10px;">
-          <div>
-            <img style="width:100%; height: 100%" src="/portfolio/branding/projects/images/sketch 3.jpg">
-          </div>
-          <div>
-            <img style="width:100%; height: 100%" src="/portfolio/branding/projects/images/sketch-1.jpg">
-          </div>
-          <div>
-            <img style="width:100%; height: 100%" src="/portfolio/branding/projects/images/sketch-2.jpg">
-          </div>
-        </div>
-        <!-- intermediate logo -->
-        <div style="width: 100%;">
-          <img style="width:100%; height: 100%" src="/portfolio/branding/projects/images/LD-Logo-drafts-rnd-1.png">
-        </div>
-        <!-- layout brochure -->
-        <img style="width: 100%; height: 100%" src="/portfolio/branding/projects/images/LD-BC-drafts-rnd2.png">
+    <div style="display: flex;">
+      <!-- Images -->
+      <div style="flex: 1; display: flex; flex-direction: column; padding-right: 70px; padding-top: 50px;">
         <div>
-
+          <img style="width: 100%; height: auto" src="./images/LD_BC_Mockup_extended.jpg">
+        </div>
+        <div>
+          <img style="width: 100%; height: auto"
+            src="./images/LD_LinkedIN_Banner_MockUp_V1 (1) copy.jpg">
         </div>
       </div>
-
-      <!-- overview / objective -->
-      <div>
+      <!-- overview -->
+      <div style="flex: 1">
         <h3 style="color: #DA1E51; font-weight: normal; font-size: 3rem;">Overview</h3>
         <p>This branding project showcases my personal business cards, designed to represent my vibrant, playful design
           style and make a memorable first impression.</p>
@@ -88,12 +73,13 @@
           revolves around organic shapes and bright colors so as to create a sense of flourishment. At the same time the
           simplified shape of the calla lily, thick line work, and intellectual type face help to add professionalism to
           the design. My logo exhibits my mission towards creative and bold design that satisfies my desire for whimsy
-          and fun imagery as well as being polished and professional..</p>
+          and fun imagery as well as being polished and professional.
+        </p>
       </div>
     </div>
 
     <!-- Middle Section -->
-    <div style="display: flex;">
+    <div style="display: flex; padding-top: 50px;">
       <!-- Process -->
       <div style="flex: 1">
         <h3 style="color: #DA1E51; font-weight: normal; font-size: 3rem;">Process</h3>
@@ -111,43 +97,55 @@
           that represents both sophistication and whimsy which plays a role in my design philosophy.</p>
       </div>
       <!-- Images -->
-      <div style="flex: 1; display: flex; flex-direction: column; padding-left: 200px; padding-top: 60px;">
+      <div style="flex: 1; display: flex; flex-direction: column; padding-left: 200px; padding-top: 50px;">
         <div>
           <img style="width: 80%; height: auto"
-            src="/portfolio/branding/projects/images/logo-w-letterhead-outl-bigger-72.png">
+            src="./images/logo-w-letterhead-outl-bigger-72.png">
         </div>
         <div>
-          <img style="width: 80%; height: auto" src="/portfolio/branding/projects/images/ombre_design_center.png">
+          <img style="width: 80%; height: auto; padding-top: 20px; padding-bottom: 20PX;" src="./images/ombre_design_center.png">
         </div>
         <div>
-          <img style="width: 80%; height: auto" src="/portfolio/branding/projects/images/LD-BC-FM.png">
+          <img style="width: 80%; height: auto" src="./images/LD-BC-FM.png">
         </div>
       </div>
     </div>
 
     <!-- Bottom Section -->
-    <div style="display: flex;">
-      <!-- Images -->
-      <div style="flex: 1; display: flex; flex-direction: column; padding-right: 100px; padding-top: 60px;">
-        <div>
-          <img style="width: 100%; height: auto"
-            src="/portfolio/branding/projects/images/LD_BC_Mockup_extended.jpg">
+    <div style="display: flex; padding-top: 50px;">
+      <!-- images -->
+      <div style="display: flex; flex-direction: column; margin-right: 15px; width: 200%; padding-top: 50px;">
+        <!-- initial sketches -->
+        <div style="display: flex; flex-direction: row; gap: 10px;">
+          <div>
+            <img style="width:100%; height: 100%" src="./images/sketch 3.jpg">
+          </div>
+          <div>
+            <img style="width:100%; height: 100%" src="./images/sketch-1.jpg">
+          </div>
+          <div>
+            <img style="width:100%; height: 100%" src="./images/sketch-2.jpg">
+          </div>
         </div>
+        <!-- intermediate logo -->
+        <div style="width: 100%; padding-top: 20px; padding-bottom: 20px;">
+          <img style="width:100%; height: 100%" src="./images/LD-Logo-drafts-rnd-1.png">
+        </div>
+        <!-- layout brochure -->
+        <img style="width: 100%; height: 100%" src="./images/LD-BC-drafts-rnd2.png">
         <div>
-          <img style="width: 100%; height: auto" src="/portfolio/branding/projects/images/LD_LinkedIN_Banner_MockUp_V1 (1) copy.jpg">
         </div>
       </div>
-
-      <!-- Outcome -->
-      <div style="flex: 1">
+      <!-- outcome -->
+      <div style="padding-left: 40px;">
         <h3 style="color: #DA1E51; font-weight: normal; font-size: 3rem;">Outcome</h3>
         <p>The final logo and business card effectively communicated the intended ideas. I’ve received much feedback
           from peers who said they’ve greatly enjoyed my branding noting it as “unique, colorful, and passionate.” The
           unique design often sparks conversation and leaves a lasting impression, enhancing my professional networking
-          efforts.</p>
+          efforts.
+        </p>
       </div>
     </div>
-
 
     <!-- Main container ends -->
   </div>
@@ -159,7 +157,7 @@
     </div>
 
     <div style="text-align: center;">
-      <a href="/contact.html">
+      <a href="./../../../contact.html">
         <h3>Reach Out</h3>
       </a>
       <ul>
@@ -170,8 +168,8 @@
 
     <div style="align-self:center;">
       <ul class="social-icons">
-        <li><a href="https://www.instagram.com/willows.studi0/"><img src="/images/icon-insta.png"></a></li>
-        <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="/images/icon-in.png"></a></li>
+        <li><a href="https://www.instagram.com/willows.studi0/"><img src="./../../../images/icon-insta.png"></a></li>
+        <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="./../../../images/icon-in.png"></a></li>
       </ul>
     </div>
   </footer>
