--- a/portfolio/fine-art/fine-art.html
+++ b/portfolio/fine-art/fine-art.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lily Design - Fine Art</title>
-    <link href="/css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+    <link href="./../../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -15,20 +15,20 @@
       <!-- Header -->
       <header>
         <div>
-          <a href="/">
-            <img src="/images/logo-w-letterhead-outl-bigger-72.png" />
+          <a href="./../../index.html">
+            <img src="./../../images/logo-w-letterhead-outl-bigger-72.png" />
           </a>
         </div>
-        <nav>
+        <nav style="word-spacing: 40px;">
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/portfolio/portfolio.html">Portolio</a></li>
-            <li><a href="/services.html">Services</a></li>
-            <li><a href="/shopping/shopping.html">Shopping</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+              <li><a href="./../../index.html">Home</a></li>
+              <li><a href="./../../about.html">About</a></li>
+              <li><a href="./../portfolio.html">Portfolio</a></li>
+              <li><a href="./../../services.html">Services</a></li>
+              <li><a href="./../../shopping/shopping.html">Shop</a></li>
+              <li><a href="./../../contact.html">Contact</a></li>
           </ul>
-        </nav>
+      </nav>
       </header>
 
       <!-- Hero Section -->
@@ -39,44 +39,44 @@
       <!-- Gallery Section -->
       <div class="gallery">
         <div class="thumbnail">
-          <a href="/portfolio/fine-art/projects/shroom-wave.html"><h3>Wave Mushroom</h3></a>
-          <a href="/portfolio/fine-art/projects/shroom-wave.html"><img src="/portfolio/fine-art/images/Mushroom-wave.png" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
-          <section><a href="/portfolio/fine-art/projects/shroom-wave.html">see more</a></section>
+          <a href="./projects/shroom-wave.html"><h3>Wave Mushroom</h3></a>
+          <a href="./projects/shroom-wave.html"><img src="./images/Mushroom-wave.png" width="2000" class="cards" /></a>
+          <section><a href="./projects/shroom-wave.html">see more</a></section>
         </div>
         <div class="thumbnail">
-          <a href="/portfolio/fine-art/projects/shroom-orange.html"><h3>Orange Mushroom</h3></a>
-          <a href="/portfolio/fine-art/projects/shroom-orange.html"><img src="/portfolio/fine-art/images/mushroom-orange.png" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
-          <section><a href="/portfolio/fine-art/projects/shroom-orange.html">see more</a></section>
+          <a href="./projects/shroom-orange.html"><h3>Orange Mushroom</h3></a>
+          <a href="./projects/shroom-orange.html"><img src="./images/mushroom-orange.png" width="2000" class="cards" /></a>
+          <section><a href="./projects/shroom-orange.html">see more</a></section>
         </div>
         <div class="thumbnail">
-          <a href="/portfolio/fine-art/projects/clumsy-cat.html"><h3>Clumsy Cat</h3></a>
-          <a href="/portfolio/fine-art/projects/clumsy-cat.html"><img src="/portfolio/fine-art/images/clumsy-cat.jpg" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
-          <section><a href="/portfolio/fine-art/projects/clumsy-cat.html">see more</a></section>
+          <a href="./projects/clumsy-cat.html"><h3>Clumsy Cat</h3></a>
+          <a href="./projects/clumsy-cat.html"><img src="./images/clumsy-cat.jpg" width="2000" class="cards" /></a>
+          <section><a href="./projects/clumsy-cat.html">see more</a></section>
         </div>
         <div class="thumbnail">
-          <a href="/portfolio/fine-art/projects/oni-and-crane.html"><h3>Oni & Crane</h3></a>
-          <a href="/portfolio/fine-art/projects/oni-and-crane.html"><img src="/portfolio/fine-art/images/Oni-crane.jpg" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
-          <section><a href="/portfolio/fine-art/projects/oni-and-crane.html">see more</a></section>
+          <a href="./projects/oni-and-crane.html"><h3>Oni & Crane</h3></a>
+          <a href="./projects/oni-and-crane.html"><img src="./images/Oni-crane.jpg" width="2000" class="cards" /></a>
+          <section><a href="./projects/oni-and-crane.html">see more</a></section>
         </div>
         <div class="thumbnail">
-          <a href="/portfolio/fine-art/projects/origami-pond.html"><h3>Origami Pond</h3></a>
-          <a href="/portfolio/fine-art/projects/origami-pond.html"><img src="/portfolio/fine-art/images/Headshot and Artwork_2024 705.png" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
-          <section><a href="/portfolio/fine-art/projects/origami-pond.html">see more</a></section>
+          <a href="./projects/origami-pond.html"><h3>Origami Pond</h3></a>
+          <a href="./projects/origami-pond.html"><img src="./images/Headshot and Artwork_2024 705.png" width="2000" class="cards" /></a>
+          <section><a href="./projects/origami-pond.html">see more</a></section>
         </div>
         <div class="thumbnail">
-          <a href="/portfolio/fine-art/projects/origami-wind.html"><h3>Origami Wind</h3></a>
-          <a href="/portfolio/fine-art/projects/origami-wind.html"><img src="/portfolio/fine-art/images/Headshot and Artwork_2024 687.png" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
-          <section><a href="/portfolio/fine-art/projects/origami-wind.html">see more</a></section>
+          <a href="./projects/origami-wind.html"><h3>Origami Wind</h3></a>
+          <a href="./projects/origami-wind.html"><img src="./images/Headshot and Artwork_2024 687.png" width="2000" class="cards" /></a>
+          <section><a href="./projects/origami-wind.html">see more</a></section>
         </div>
         <div class="thumbnail">
-            <a href="/portfolio/fine-art/projects/water-temple.html"><h3>Las Pulgas Water Temple</h3></a>
-            <a href="/portfolio/fine-art/projects/water-temple.html"><img src="/portfolio/fine-art/images/Las-Pulgas.jpg" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
-            <section><a href="/portfolio/fine-art/projects/water-temple.html">see more</a></section>
+            <a href="./projects/water-temple.html"><h3>Las Pulgas Water Temple</h3></a>
+            <a href="./projects/water-temple.html"><img src="./images/Las-Pulgas.jpg" width="2000" class="cards" /></a>
+            <section><a href="./projects/water-temple.html">see more</a></section>
           </div>
           <div class="thumbnail">
-            <a href="/portfolio/fine-art/projects/hells-eye.html"><h3>Hell's Eye</h3></a>
-            <a href="/portfolio/fine-art/projects/hells-eye.html"><img src="/portfolio/fine-art/images/66424645074__DB1CF6FC-B9E1-43BD-868B-01A62F37CCC3 2.jpeg" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
-            <section><a href="/portfolio/fine-art/projects/hells-eye.html">see more</a></section>
+            <a href="./projects/hells-eye.html"><h3>Hell's Eye</h3></a>
+            <a href="./projects/hells-eye.html"><img src="./images/66424645074__DB1CF6FC-B9E1-43BD-868B-01A62F37CCC3 2.jpeg" width="2000" class="cards" /></a>
+            <section><a href="./projects/hells-eye.html">see more</a></section>
           </div>
       </div>
     </div>
@@ -88,7 +88,7 @@
     </div>
 
     <div style="text-align: center;">
-      <a href="/contact.html">
+      <a href="./../../contact.html">
         <h3>Reach Out</h3>
       </a>
       <ul>
@@ -99,8 +99,8 @@
 
     <div style="align-self:center;">
       <ul class="social-icons">
-        <li><a href="https://www.instagram.com/willows.studi0/"><img src="/images/icon-insta.png"></a></li>
-        <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="/images/icon-in.png"></a></li>
+        <li><a href="https://www.instagram.com/willows.studi0/"><img src="./../../images/icon-insta.png"></a></li>
+        <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="./../../images/icon-in.png"></a></li>
       </ul>
     </div>
   </footer>
