--- a/portfolio/fine-art/projects/hells-eye.html
+++ b/portfolio/fine-art/projects/hells-eye.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Lily Design - Hell's Eye</title>
-    <link href="/css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+    <title>Lily Design - Clumsy Cat</title>
+    <link href="./../../../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -15,18 +15,18 @@
         <!-- Header -->
         <header>
             <div>
-                <a href="/">
-                    <img src="/images/logo-w-letterhead-outl-bigger-72.png" />
+                <a href="./../../../index.html">
+                    <img src="./../../../images/logo-w-letterhead-outl-bigger-72.png" />
                 </a>
             </div>
-            <nav>
+            <nav style="word-spacing: 40px;">
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about.html">About</a></li>
-                    <li><a href="/portfolio/portfolio.html">Portolio</a></li>
-                    <li><a href="/services.html">Services</a></li>
-                    <li><a href="/shopping/shopping.html">Shopping</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="./../../../index.html">Home</a></li>
+                    <li><a href="./../../../about.html">About</a></li>
+                    <li><a href="./../../portfolio.html">Portfolio</a></li>
+                    <li><a href="./../../../services.html">Services</a></li>
+                    <li><a href="./../../../shopping/shopping.html">Shop</a></li>
+                    <li><a href="./../../../contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -34,11 +34,11 @@
         <div>
             <nav>
                 <ul style="padding-left: 0; padding-top: 30px; padding-bottom: 15px;">
-                    <li style="display: inline;"><a style="color: #066129" href="/portfolio/portfolio.html">Portolio</a>
+                    <li style="display: inline;"><a style="color: #066129" href="./../../portfolio.html">Portfolio</a>
                     </li>
                     <span style="color: #066129;">|</span>
                     <li style="display: inline;"><a style="color: #066129"
-                            href="/portfolio/fine-art/fine-art.html">Fine Art</a>
+                            href="./../fine-art.html">Fine Art</a>
                     </li> <span style="color: #066129;">|</span>
                     <li style="display: inline;"><a style="color: #066129" href="#top">Hell's Eye</a>
                     </li>
@@ -60,14 +60,14 @@
                 <div style="display: flex; flex-direction: row;">
                     <div>
                         <img style="width:100%; height: 100%"
-                            src="/portfolio/fine-art/projects/images/66424645074__DB1CF6FC-B9E1-43BD-868B-01A62F37CCC3 2.jpeg">
+                            src="./images/66424645074__DB1CF6FC-B9E1-43BD-868B-01A62F37CCC3 2.jpeg">
                     </div>
                 </div>
             </div>
 
             <!-- overview / objective -->
-            <div style="width: 49%;">
-                <p>24’ x 36"
+            <div style="width: 49%; padding-left: 30px;">
+                <p>24" x 36"
                     <br><br>
                     Acrylic
                 </p>
@@ -84,7 +84,7 @@
         </div>
 
         <div style="text-align: center;">
-            <a href="/contact.html">
+            <a href="./../../../contact.html">
                 <h3>Reach Out</h3>
             </a>
             <ul>
@@ -95,8 +95,8 @@
 
         <div style="align-self:center;">
             <ul class="social-icons">
-                <li><a href="https://www.instagram.com/willows.studi0/"><img src="/images/icon-insta.png"></a></li>
-                <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="/images/icon-in.png"></a></li>
+                <li><a href="https://www.instagram.com/willows.studi0/"><img src="./../../../images/icon-insta.png"></a></li>
+                <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="./../../../images/icon-in.png"></a></li>
             </ul>
         </div>
     </footer>
