--- a/portfolio/illustrations/illustration.html
+++ b/portfolio/illustrations/illustration.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lily Design - Illustrations</title>
-    <link href="/css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+    <link href="./../../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -15,18 +15,18 @@
       <!-- Header -->
       <header>
         <div>
-          <a href="/">
+          <a href="./../../index.html">
             <img src="/images/logo-w-letterhead-outl-bigger-72.png" />
           </a>
         </div>
         <nav>
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/portfolio/portfolio.html">Portolio</a></li>
-            <li><a href="/services.html">Services</a></li>
-            <li><a href="/shopping/shopping.html">Shopping</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="./../../index.html">Home</a></li>
+            <li><a href="./../../about.html">About</a></li>
+            <li><a href="./../portfolio.html">Portolio</a></li>
+            <li><a href="./../../services.html">Services</a></li>
+            <li><a href="./../../shopping/shopping.html">Shopping</a></li>
+            <li><a href="./../../contact.html">Contact</a></li>
           </ul>
         </nav>
       </header>
@@ -39,39 +39,39 @@
       <!-- Gallery Section -->
       <div class="gallery">
         <div class="thumbnail">
-          <a href="/portfolio/illustrations/projects/sushi-spread.html"><h3>Sushi Spread</h3></a>
-          <a href="/portfolio/illustrations/projects/sushi-spread.html"><img src="/portfolio/illustrations/images/sushi (4).jpg" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
-          <section><a href="/portfolio/illustrations/projects/sushi-spread.html">see more</a></section>
+          <a href="./projects/sushi-spread.html"><h3>Sushi Spread</h3></a>
+          <a href="./projects/sushi-spread.html"><img src="./images/sushi (4).jpg" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
+          <section><a href="./projects/sushi-spread.html">see more</a></section>
         </div>
         <div class="thumbnail">
-          <a href="/portfolio/illustrations/projects/sewing-infographic.html"><h3>Sewing Machine Infographic</h3></a>
-          <a href="/portfolio/illustrations/projects/sewing-infographic.html"><img src="/portfolio/illustrations/images/sewing-machine-inforgraphic-jpg.jpg" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
-          <section><a href="/portfolio/illustrations/projects/sewing-infographic.html">see more</a></section>
+          <a href="./projects/sewing-infographic.html"><h3>Sewing Machine Infographic</h3></a>
+          <a href="./projects/sewing-infographic.html"><img src="./images/sewing-machine-inforgraphic-jpg.jpg" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
+          <section><a href="./projects/sewing-infographic.html">see more</a></section>
         </div>
         <div class="thumbnail">
-          <a href="/portfolio/illustrations/projects/nymphia-wind.html"><h3>Nymphia Wind Disguised</h3></a>
-          <a href="/portfolio/illustrations/projects/nymphia-wind.html"><img src="/portfolio/illustrations/images/Focal point-Nymphia Wind Garden (2) copy.jpg" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
-          <section><a href="/portfolio/illustrations/projects/nymphia-wind.html">see more</a></section>
+          <a href="./projects/nymphia-wind.html"><h3>Nymphia Wind Disguised</h3></a>
+          <a href="./projects/nymphia-wind.html"><img src="./images/Focal point-Nymphia Wind Garden (2) copy.jpg" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
+          <section><a href="./projects/nymphia-wind.html">see more</a></section>
         </div>
         <div class="thumbnail">
-          <a href="/portfolio/illustrations/projects/shimmer-fish.html"><h3>Shimmer Fish</h3></a>
-          <a href="/portfolio/illustrations/projects/shimmer-fish.html"><img src="/portfolio/illustrations/images/Shimmer Table Fish v.2.jpg" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
-          <section><a href="/portfolio/illustrations/projects/shimmer-fish.html">see more</a></section>
+          <a href="./projects/shimmer-fish.html"><h3>Shimmer Fish</h3></a>
+          <a href="./projects/shimmer-fish.html"><img src="./images/Shimmer Table Fish v.2.jpg" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
+          <section><a href="./projects/shimmer-fish.html">see more</a></section>
         </div>
         <div class="thumbnail">
-          <a href="/portfolio/illustrations/projects/zinnia-scientific.html"><h3>Queen Lime Peach Zinnia</h3></a>
-          <a href="/portfolio/illustrations/projects/zinnia-scientific.html"><img src="/portfolio/illustrations/images/zinnia scientific illustration.png" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
-          <section><a href="/portfolio/illustrations/projects/zinnia-scientific.html">see more</a></section>
+          <a href="./projects/zinnia-scientific.html"><h3>Queen Lime Peach Zinnia</h3></a>
+          <a href="./projects/zinnia-scientific.html"><img src="./images/zinnia scientific illustration.png" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
+          <section><a href="./projects/zinnia-scientific.html">see more</a></section>
         </div>
         <div class="thumbnail">
-            <a href="/portfolio/illustrations/projects/fig-leaf.html"><h3>Fig Tree Leaf</h3></a>
-            <a href="/portfolio/illustrations/projects/fig-leaf.html"><img src="/portfolio/illustrations/images/fig-leaf-sci-ill.png" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
-            <section><a href="/portfolio/illustrations/projects/fig-leaf.html">see more</a></section>
+            <a href="./projects/fig-leaf.html"><h3>Fig Tree Leaf</h3></a>
+            <a href="./projects/fig-leaf.html"><img src="./images/fig-leaf-sci-ill.png" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
+            <section><a href="./projects/fig-leaf.html">see more</a></section>
           </div>
           <div class="thumbnail">
-            <a href="/portfolio/illustrations/projects/tea-time.html"><h3>Tea Time</h3></a>
-            <a href="/portfolio/illustrations/projects/tea-time.html"><img src="/portfolio/illustrations/images/Alice in Wonderland Typographic Illustration.png" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
-            <section><a href="/portfolio/illustrations/projects/tea-time.html">see more</a></section>
+            <a href="./projects/tea-time.html"><h3>Tea Time</h3></a>
+            <a href="./projects/tea-time.html"><img src="./images/Alice in Wonderland Typographic Illustration.png" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
+            <section><a href="./projects/tea-time.html">see more</a></section>
           </div>
       </div>
     </div>
@@ -83,7 +83,7 @@
     </div>
 
     <div style="text-align: center;">
-      <a href="/contact.html">
+      <a href="./../../contact.html">
         <h3>Reach Out</h3>
       </a>
       <ul>
@@ -94,8 +94,8 @@
 
     <div style="align-self:center;">
       <ul class="social-icons">
-        <li><a href="https://www.instagram.com/willows.studi0/"><img src="/images/icon-insta.png"></a></li>
-        <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="/images/icon-in.png"></a></li>
+        <li><a href="https://www.instagram.com/willows.studi0/"><img src="./../../images/icon-insta.png"></a></li>
+        <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="./../../images/icon-in.png"></a></li>
       </ul>
     </div>
   </footer>
