--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lily Design - Portfolio</title>
-  <link href="/css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+  <link href="./../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -15,18 +15,18 @@
     <!-- Header -->
     <header>
       <div>
-        <a href="/">
-          <img src="/images/logo-w-letterhead-outl-bigger-72.png" />
+        <a href="./../index.html">
+          <img src="./../images/logo-w-letterhead-outl-bigger-72.png" />
         </a>
       </div>
-      <nav>
+      <nav style="word-spacing: 40px;">
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/portfolio/portfolio.html">Portolio</a></li>
-          <li><a href="/services.html">Services</a></li>
-          <li><a href="/shopping/shopping.html">Shopping</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="./../index.html">Home</a></li>
+          <li><a href="./../about.html">About</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
+          <li><a href="./../services.html">Services</a></li>
+          <li><a href="./../shopping/shopping.html">Shop</a></li>
+          <li><a href="./../contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -37,73 +37,103 @@
     </div>
 
     <!-- Gallery Section -->
-    <div style="margin-bottom: 100px;">
-      <!-- Branding -->
-      <div>
-        <a href="/portfolio/branding/branding.html" style="text-decoration: none;">
-          <h3 style="color: #D91A4D ; font-size: 3rem; font-weight: normal; ;">Branding</h3>
-        </a>
-        <div style="display: flex; justify-content: space-between; gap: 20px;">
-          <a href="/portfolio/branding/projects/LD-branding.html"><img src="/portfolio/images/LD_BC_Mockup_extended.jpg"
-              alt="Lily Forman Protrait" style="width:560px; object-fit: cover; border-radius: 15px; height: 500px" /></a>
-          <a href="/portfolio/branding/branding.html"><img src="/portfolio/images/coming-soon.png"
-              alt="Lily Forman Protrait" style="width:560px; object-fit: cover; border-radius: 15px; height: 500px" /></a>
-          <a href="/portfolio/branding/branding.html"><img src="/portfolio/images/coming-soon.png"
-              alt="Lily Forman Protrait" style="width:560px; object-fit: cover; border-radius: 15px; height: 500px" /></a>
-        </div>
-        <section style="text-align: right;"><a href="/portfolio/branding/branding.html"
-            style="font-size: 1.3rem; color: #D91A4D;">see more</a></section>
-      </div>
+    <div style="margin-bottom: 100px; margin-left: auto; margin-right: auto;">
+
       <!-- Layouts -->
       <div>
-        <a href="/portfolio/layouts/layouts.html" style="text-decoration: none;">
-          <h3 style="color: #D91A4D ; font-size: 3rem; font-weight: normal; ">Layouts</h3>
+        <a href="./layouts/layouts.html" style="text-decoration: none;">
+          <h3 style="color: #D91A4D ; font-size: 3rem; font-weight: normal;">Layouts</h3>
         </a>
-        <div style="display: flex; justify-content: space-between; gap: 20px;">
-          <a href="/portfolio/layouts/projects/seeding-city.html"><img
-              src="/portfolio/images/seeding-the-city-poster_fin-mech.jpg" alt=""
-              style="width:560px; height: 500px; object-fit: cover; border-radius: 15px;" /></a>
-          <a href="/portfolio/layouts/projects/marian-bantjes.html"><img src="/portfolio/images/Magazine_Mockup_5.png"
-              alt="" style="width:560px; object-fit: cover; border-radius: 15px; height: 500px" /></a>
-          <a href="/portfolio/layouts/projects/kamunsil-cd.html"><img src="/portfolio/images/Kamunsil-CD-Mockup-v2.jpg"
-              alt="" style="width:560px; object-fit: cover; border-radius: 15px; height: 500px" /></a>
+
+        <!-- Responsive Image Grid -->
+        <div style="
+              display: grid;
+              grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+              gap: 20px;
+        ">
+          <a href="./layouts/projects/seeding-city.html">
+            <img src="./images/seeding-the-city-poster_fin-mech.jpg" alt=""
+              style="width: 100%; aspect-ratio: 1/1; border-radius: 15px; object-fit: cover;" />
+          </a>
+          <a href="./layouts/projects/marian-bantjes.html">
+            <img src="./images/Magazine_Mockup_5.png" alt=""
+              style="width: 100%; aspect-ratio: 1/1; border-radius: 15px; object-fit: cover;" />
+          </a>
+          <a href="./layouts/projects/kamunsil-cd.html">
+            <img src="./images/Kamunsil-CD-Mockup-v2.jpg" alt=""
+              style="width: 100%; aspect-ratio: 1/1; border-radius: 15px; object-fit: cover;" />
+          </a>
         </div>
-        <section style="text-align: right;"><a href="/portfolio/layouts/layouts.html"
-            style="font-size: 1.3rem; color: #D91A4D;">see more</a></section>
+
+        <!-- "See More" Section -->
+        <section style="text-align: right;">
+          <a href="./layouts/layouts.html" style="font-size: 1.3rem; color: #D91A4D;">see more</a>
+        </section>
       </div>
       <!-- Illustrations -->
       <div>
-        <a href="/portfolio/illustrations/illustration.html" style="text-decoration: none;">
+        <a href="./illustrations/illustration.html" style="text-decoration: none;">
           <h3 style="color: #D91A4D ; font-size: 3rem; font-weight: normal; ">Illustrations</h3>
         </a>
-        <div style="display: flex; justify-content: space-between; gap: 20px;"><a
-            href="/portfolio/illustrations/projects/sushi-spread.html"><img src="/portfolio/images/sushi (4).jpg" alt=""
-              style="width:560px; object-fit: cover; border-radius: 15px; height: 500px" /></a>
-          <a href="/portfolio/illustrations/projects/sewing-infographic.html"><img
-              src="/portfolio/images/sewing-machine-inforgraphic-jpg.jpg" alt=""
-              style="width:560px; object-fit: cover; border-radius: 15px; height: 500px" /></a>
-          <a href="/portfolio/illustrations/projects/zinnia-scientific.html"><img
-              src="/portfolio/images/zinnia scientific illustration.png" alt=""
-              style="width:560px; object-fit: cover; border-radius: 15px; height: 500px" /></a>
+        <div style="
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 20px;
+        ">
+          <a href="./illustrations/projects/sushi-spread.html"><img src="./images/sushi (4).jpg" alt=""
+              style="width: 100%; aspect-ratio: 1/1; border-radius: 15px; object-fit: cover;" /></a>
+          <a href="./illustrations/projects/sewing-infographic.html"><img
+              src="./images/sewing-machine-inforgraphic-jpg.jpg" alt=""
+              style="width: 100%; aspect-ratio: 1/1; border-radius: 15px; object-fit: cover;" /></a>
+          <a href="./illustrations/projects/zinnia-scientific.html"><img
+              src="./images/zinnia scientific illustration.png" alt=""
+              style="width: 100%; aspect-ratio: 1/1; border-radius: 15px; object-fit: cover;" /></a>
         </div>
-        <section style="text-align: right;"><a href="/portfolio/illustrations/illustration.html"
+        <section style="text-align: right;"><a href="./illustrations/illustration.html"
             style="font-size: 1.3rem; color: #D91A4D;">see more</a></section>
       </div>
       <!-- Fine Art -->
       <div>
-        <a href="/portfolio/fine-art/fine-art.html" style="text-decoration: none;">
+        <a href="./fine-art/fine-art.html" style="text-decoration: none;">
           <h3 style="color: #D91A4D ; font-size: 3rem; font-weight: normal; ">Fine Art</h3>
         </a>
-        <div style="display: flex; justify-content: space-between; gap: 20px;">
-          <a href="/portfolio/fine-art/projects/origami-pond.html"><img
-              src="/portfolio/images/Headshot and Artwork_2024 705.png" alt="" style="width:560px; object-fit: cover; border-radius: 15px; height: 500px" /></a>
-          <a href="/portfolio/fine-art/projects/oni-and-crane.html"><img src="/portfolio/images/Oni-crane.jpg" alt=""
-              style="width:560px; object-fit: cover; border-radius: 15px; height: 500px" /></a>
-          <a href="/portfolio/fine-art/projects/shroom-wave.html"><img src="/portfolio/images/Mushroom-wave.png" alt=""
-              style="width:560px; object-fit: cover; border-radius: 15px; height: 500px" /></a>
+
+        <div style="
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 20px;
+        ">
+          <a href="./fine-art/projects/origami-pond.html"><img src="./images/Headshot and Artwork_2024 705.png" alt=""
+              style="width: 100%; aspect-ratio: 1/1; border-radius: 15px; object-fit: cover;" /></a>
+          <a href="./fine-art/projects/oni-and-crane.html"><img src="./images/Oni-crane.jpg" alt=""
+              style="width: 100%; aspect-ratio: 1/1; border-radius: 15px; object-fit: cover;" /></a>
+          <a href="./fine-art/projects/shroom-wave.html"><img src="./images/Mushroom-wave.png" alt=""
+              style="width: 100%; aspect-ratio: 1/1; border-radius: 15px; object-fit: cover;" /></a>
         </div>
-        <section style="text-align: right;"><a href="/portfolio/fine-art/fine-art.html" style="color: #D91A4D;font-size: 1.3rem;">see more</a>
+        <section style="text-align: right;"><a href="./fine-art/fine-art.html"
+            style="color: #D91A4D;font-size: 1.3rem;">see more</a>
         </section>
+      </div>
+      <!-- Branding -->
+      <div>
+        <a href="./branding/branding.html" style="text-decoration: none;">
+          <h3 style="color: #D91A4D ; font-size: 3rem; font-weight: normal; ;">Branding</h3>
+        </a>
+        <div style="
+                display: grid;
+                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+                gap: 20px;
+              ">
+          <a href="./branding/projects/LD-branding.html"><img src="./images/LD_BC_Mockup_extended.jpg"
+              alt="Lily Forman Protrait"
+              style="width: 100%; aspect-ratio: 1/1; border-radius: 15px; object-fit: cover;" /></a>
+          <a href="./branding/branding.html"><img src="./images/coming-soon.png" alt="Lily Forman Protrait"
+              style="width: 100%; aspect-ratio: 1/1; border-radius: 15px; object-fit: cover;" /></a>
+          <a href="./branding/branding.html"><img src="./images/coming-soon.png" alt="Lily Forman Protrait"
+              style="width: 100%; aspect-ratio: 1/1; border-radius: 15px; object-fit: cover;" /></a>
+        </div>
+        <section style="text-align: right;"><a href="./branding/branding.html"
+            style="font-size: 1.3rem; color: #D91A4D;">see more</a></section>
       </div>
     </div>
   </div>
@@ -115,7 +145,7 @@
     </div>
 
     <div style="text-align: center;">
-      <a href="/contact.html">
+      <a href="./../contact.html">
         <h3>Reach Out</h3>
       </a>
       <ul>
@@ -126,8 +156,8 @@
 
     <div style="align-self:center;">
       <ul class="social-icons">
-        <li><a href="https://www.instagram.com/willows.studi0/"><img src="/images/icon-insta.png"></a></li>
-        <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="/images/icon-in.png"></a></li>
+        <li><a href="https://www.instagram.com/willows.studi0/"><img src="./../images/icon-insta.png"></a></li>
+        <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="./../images/icon-in.png"></a></li>
       </ul>
     </div>
   </footer>
