--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lily Design - Services</title>
-  <link href="/css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+  <link href="./css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -15,18 +15,18 @@
     <!-- Header -->
     <header>
       <div>
-        <a href="/">
-          <img src="/images/logo-w-letterhead-outl-bigger-72.png" />
+        <a href="./index.html">
+          <img src="./images/logo-w-letterhead-outl-bigger-72.png" />
         </a>
       </div>
-      <nav>
+      <nav style="word-spacing: 40px;">
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/portfolio/portfolio.html">Portolio</a></li>
-          <li><a href="/services.html">Services</a></li>
-          <li><a href="/shopping/shopping.html">Shopping</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./portfolio/portfolio.html">Portfolio</a></li>
+          <li><a href="./services.html">Services</a></li>
+          <li><a href="./shopping/shopping.html">Shop</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -39,37 +39,37 @@
     <!-- Body -->
     <div style="display: flex; justify-content: center;">
       <div style="margin:1%; width:100%;">
-        <a style="text-decoration:none;" href="/portfolio/branding/branding.html"><h3 style="color:#D91A4D; font-size:3rem; font-weight:normal; text-decoration: none;">Branding</h3></a>
-        <a href="/portfolio/branding/branding.html"><img style="width:100%; height:500px; border-radius:15px; object-fit:cover;"
-          src="images/LD_BC_Mockup_extended.jpg"></a>
+        <a style="text-decoration:none;" href="./portfolio/branding/branding.html"><h3 style="color:#D91A4D; font-size:3rem; font-weight:normal; text-decoration: none;">Branding</h3></a>
+        <a href="./portfolio/branding/branding.html"><img style="width:100%; height:500px; border-radius:15px; object-fit:cover;"
+          src="./images/LD_BC_Mockup_extended.jpg"></a>
         <p>Whether its you need something from scratch, or just some gouging up of what you already have, I can help. I
           can create style guides, letterheads, buisness cards, and web designs all tailored for your brand.</p>
         <section style="text-align:right;"><a href="/portfolio/branding/branding.html" style="color:#D91A4D;">see more</a>
         </section>
       </div>
       <div style="margin:1%; width:100%">
-        <a style="text-decoration:none;" href="/portfolio/layouts/layouts.html"><h3 style="color:#D91A4D; font-size:3rem; font-weight:normal;">Layouts</h3></a>
-        <a href="/portfolio/layouts/layouts.html"><img style="width:100%; height:500px; border-radius:15px; object-fit:cover;"
-          src="/images/Magazine_Mockup_5.png"></a>
+        <a style="text-decoration:none;" href="./portfolio/layouts/layouts.html"><h3 style="color:#D91A4D; font-size:3rem; font-weight:normal;">Layouts</h3></a>
+        <a href="./portfolio/layouts/layouts.html"><img style="width:100%; height:500px; border-radius:15px; object-fit:cover;"
+          src="./images/Magazine_Mockup_5.png"></a>
         <p>Posters, billboards, packaging, and more! Any job that needs organized information in an aesthetically
           pleasing manner is well within my wheelhouse. I can apply my skills to make it work within the brand as well
           as stand out from the crowd.</p>
-        </a><section style="text-align:right;"><a href="/portfolio/layouts/layouts.html" style="color:#D91A4D;">see more</a>
+        </a><section style="text-align:right;"><a href="./portfolio/layouts/layouts.html" style="color:#D91A4D;">see more</a>
         </section>
       </div>
       <div style="margin:1%; width:100%">
-        <a style="text-decoration:none;" href="/portfolio/illustrations/illustration.html"><h3 style="color:#D91A4D; font-size:3rem; font-weight:normal;">Illustrations</h3></a>
-        <a href="/portfolio/illustrations/illustration.html"><img style="width:100%; height:500px; border-radius:15px; object-fit:cover;"
-          src="/images/zinnia scientific illustration.png"></a>
+        <a style="text-decoration:none;" href="./portfolio/illustrations/illustration.html"><h3 style="color:#D91A4D; font-size:3rem; font-weight:normal;">Illustrations</h3></a>
+        <a href="./portfolio/illustrations/illustration.html"><img style="width:100%; height:500px; border-radius:15px; object-fit:cover;"
+          src="./images/zinnia scientific illustration.png"></a>
         <p>Maybe you’re interested in a graphic to add to your website, newsletter, social media,
           etc. I can design graphics that will compliment your material and enhance your product. </p>
-        <section style="text-align:right;"><a href="/portfolio/illustrations/illustration.html" style="color:#D91A4D;">see more</a>
+        <section style="text-align:right;"><a href="./portfolio/illustrations/illustration.html" style="color:#D91A4D;">see more</a>
         </section>
       </div>
     </div>
 
     <section style="text-align:center; font-size: 3rem;">
-      <a href="/contact.html" style="color: #D91E50;">
+      <a href="./contact.html" style="color: #D91E50;">
         <h3 style="font-weight: normal;">Inquiries Here</h3>
       </a>
     </section>
@@ -93,8 +93,8 @@
 
     <div style="align-self:center;">
       <ul class="social-icons">
-        <li><a href="https://www.instagram.com/willows.studi0/"><img src="/images/icon-insta.png"></a></li>
-        <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="/images/icon-in.png"></a></li>
+        <li><a href="https://www.instagram.com/willows.studi0/"><img src="./images/icon-insta.png"></a></li>
+        <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="./images/icon-in.png"></a></li>
       </ul>
     </div>
   </footer>
